<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KGListView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="kg_img_desc">img desc</string>
    <string name="max_text_color">max</string>
    <string name="text_common_title">标题</string>
    <string name="text_common_title_scan">扫描</string>
    <string name="text_empty_desc">没有找到歌曲列表</string>
    <string name="search_edit_hint">今天想听什么音乐?</string>

    <!-- 歌曲列表类型 -->
    <string name="title_favorite_music">我的收藏</string>
    <string name="title_disc_music">本地音乐</string>
    <string name="title_mylist_music">我的歌单</string>
    <string name="title_online_music">在线搜歌</string>

    <!-- 播放类型 -->
    <string name="play_mode_random">随机播放</string>
    <string name="play_mode_single">单曲循环</string>
    <string name="play_mode_sequence">顺序播放</string>
    <string name="play_mode_repeat_all">列表循环</string>

    <!-- 歌曲操作类型 -->
    <string name="menu_action_addto">添加</string>
    <string name="menu_action_similar">歌曲漫游</string>
    <string name="menu_action_delete">删除</string>
    <string name="menu_action_down">下载</string>
    <string name="menu_action_info">歌曲信息</string>
    <string name="menu_action_share">分享</string>
    <string name="menu_action_transfer">传歌</string>

</resources>