<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_bar_header_bg"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/list_common_bar_header"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/common_bar_header_bg_height"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/list_common_bar_header_randomplay"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/bg_viewgroup_button"
            android:gravity="center|left"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ic_list_common_bar_header_randomplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="3.0dip"
                android:clickable="false"
                android:contentDescription="@string/kg_img_desc"
                android:focusable="false"
                android:src="@drawable/playback_playmode_sequence_button" />

            <TextView
                android:id="@+id/tv_list_common_bar_header_randomplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:tag="@string/max_text_color"
                android:text="@string/play_mode_sequence"
                android:textColor="@color/max_text_color"
                android:textSize="@dimen/textMediumSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_common_bar_header_update_list"
            android:layout_width="@dimen/lsit_common_bar_right_btn_width"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_viewgroup_button"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="3.0dip"
            android:paddingRight="3.0dip"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:contentDescription="@string/kg_img_desc"
                android:scaleType="fitCenter"
                android:src="@drawable/list_common_bar_header_update_list_ic" />
        </LinearLayout>

        <ImageView
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/kg_title_bar_divider_line_margin"
            android:layout_marginTop="@dimen/kg_title_bar_divider_line_margin"
            android:background="@color/common_headr_operation_bar_color"
            android:contentDescription="@string/kg_img_desc"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/list_common_bar_header_editmode"
            android:layout_width="@dimen/lsit_common_bar_right_btn_width"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_viewgroup_button"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/ic_list_common_bar_header_editmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3.0dip"
                android:tag="kg_skin_image_ic_list_common_bar_header_editmode"
                android:text="多选"
                android:textColor="@color/black"
                android:textSize="@dimen/textMediumSize" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@color/common_headr_operation_line_color"
        android:contentDescription="@string/kg_img_desc" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kg_common_header_bar_line"
        android:contentDescription="@string/kg_img_desc" />

</LinearLayout>